k8s/app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-graphql-springboot-cluster-ip-service
  namespace: graphql
spec:
  type: ClusterIP
  selector:
    apps: docker-graphql-springboot
  ports:
    - port: 8855
      targetPort: 8855
